# habit_tracker

./: .gitignore  README.md  pyproject.toml  run.py
cli/src/: frontend.py  login_handler.py  sql_controller.py  start.py
cli/src/frontend/: dashboard.py  frontend.py
data/src/: habits.py  user.py
db/: controller.py  logger.py  populate_debug_data.py  table_definitions.py
db/server/src/: server.py
db/src/: controller.py  database.py  logger.py  server.py  start.py  table_definitions.py
db/src/table_definitions/: completions.py  habit.py  habit_list.py  user.py
db/tests/: test.py
db/util/: populate_debug_data.py
docs/: README.md  documentation.pptx
docs/abstract/: abstract.tex
frontend/src/: frame.py  gui.py
frontend/src/cli/: input_option.py  prompt.py
frontend/src/data/: habits.py  user.py
frontend/src/lib/: gui_enums.py
frontend/src/panels/: habits_panel.py  panel.py  statistics_panel.py
frontend/src/screens/: login_screen.py  main_screen.py  screen.py
gui/: front_screen.py  gui.py  home_screen.py  pub_habits_screen.py  screen.py  stats_screen.py  widgets.py
gui/src/: front_screen.py  gui.py  home_screen.py  pub_habits_screen.py  screen.py  stats_screen.py
gui/util/: gui_enums.py  gui_themes.py  validators.py  widgets.py
stubs/sqlite_rx/: client.pyi  server.pyi
test_unit/: output_data.py  test_fixture.py
tests/: analytics_test.py  db_test.py  objects_test.py  request_test.py  user_test.py
util/src/: action_handler.py  data_classes.py  endpoint_api.py  gui_enums.py  helper.py  sql_controller.py  test_unit.py  validators.py
(+1 files in other folders)
